删除bridge，无用
