# docs/swagger.json
@@ -8,358 +8,6 @@
     },
     "basePath": "/app/ipc/api/",
     "paths": {
-        "/bridge/count": {
-            "post": {
-                "description": "查询桥接数量",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "查询桥接数量",
-                "parameters": [
-                    {
-                        "description": "查询参数",
-                        "name": "search",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.ParamSearch"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-int64"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/create": {
-            "post": {
-                "description": "创建桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "创建桥接",
-                "parameters": [
-                    {
-                        "description": "桥接信息",
-                        "name": "search",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.Bridge"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-types_Bridge"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/export": {
-            "get": {
-                "description": "导出桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/octet-stream"
-                ],
-                "tags": [
-                    "product"
-                ],
-                "summary": "导出桥接",
-                "responses": {}
-            }
-        },
-        "/bridge/import": {
-            "post": {
-                "description": "导入桥接",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "product"
-                ],
-                "summary": "导入桥接",
-                "parameters": [
-                    {
-                        "type": "file",
-                        "description": "压缩包",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-int64"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/list": {
-            "get": {
-                "description": "查询桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "查询桥接",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "skip",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyList-types_Bridge"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/search": {
-            "post": {
-                "description": "查询桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "查询桥接",
-                "parameters": [
-                    {
-                        "description": "查询参数",
-                        "name": "search",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.ParamSearch"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyList-types_Bridge"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/{id}": {
-            "get": {
-                "description": "获取桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "获取桥接",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "桥接ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-types_Bridge"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "修改桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "修改桥接",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "桥接ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "桥接信息",
-                        "name": "bridge",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.Bridge"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-types_Bridge"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/{id}/delete": {
-            "get": {
-                "description": "删除桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "删除桥接",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "桥接ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-types_Bridge"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/{id}/disable": {
-            "get": {
-                "description": "禁用桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "禁用桥接",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "桥接ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-types_Bridge"
-                        }
-                    }
-                }
-            }
-        },
-        "/bridge/{id}/enable": {
-            "get": {
-                "description": "启用桥接",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bridge"
-                ],
-                "summary": "启用桥接",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "桥接ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-types_Bridge"
-                        }
-                    }
-                }
-            }
-        },
         "/camera/create": {
             "post": {
                 "description": "创建摄像头",
@@ -752,17 +400,6 @@
                 }
             }
         },
-        "api.ReplyData-types_Bridge": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/types.Bridge"
-                },
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
         "api.ReplyData-types_Camera": {
             "type": "object",
             "properties": {
@@ -771,23 +408,6 @@
                 },
                 "error": {
                     "type": "string"
-                }
-            }
-        },
-        "api.ReplyList-types_Bridge": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/types.Bridge"
-                    }
-                },
-                "error": {
-                    "type": "string"
-                },
-                "total": {
-                    "type": "integer"
                 }
             }
         },
@@ -808,26 +428,6 @@
                 }
             }
         },
-        "types.Bridge": {
-            "type": "object",
-            "properties": {
-                "created": {
-                    "type": "string"
-                },
-                "desc": {
-                    "type": "string"
-                },
-                "disabled": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "types.Camera": {
             "type": "object",
             "properties": {
@@ -843,13 +443,13 @@
                 "id": {
                     "type": "string"
                 },
-                "ipc_id": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
                 "url": {
+                    "type": "string"
+                },
+                "webrtc_streamer": {
                     "type": "string"
                 }
             }
